--- a/fe/src/app/themes/default-theme/navigation/navigation.component.html
+++ b/fe/src/app/themes/default-theme/navigation/navigation.component.html
@@ -1,1 +1,1 @@
-<frmdb-navigation-segment [nav]="metadataCatalog$|async"></frmdb-navigation-segment>
+<ul frmdb-navigation-segment [nav]="metadataCatalog$|async" class="nav"></ul>
