--- a/fe/src/app/themes/default-theme/navigation/navigation.segment.html
+++ b/fe/src/app/themes/default-theme/navigation/navigation.segment.html
@@ -1,9 +1,13 @@
 <li *ngFor="let entity of nav" class="nav-item" [class.active]="entity.active">
-    <i *ngIf="entity.children.length>0 && entity.collapsed" style="cursor: pointer; font-size: 50%; margin-top: 1em" class="nc-icon nc-stre-right" (click)="expand(entity.id, $event)"></i>
-    <i *ngIf="entity.children.length>0 && !entity.collapsed" style="cursor: pointer; font-size: 50%; margin-top: 1em" class="nc-icon nc-stre-down" (click)="collapse(entity.id, $event)"></i>
-    <i *ngIf="entity.children.length==0" style="font-size: 50%; margin-top: 1em">&nbsp;</i>
-    <a [routerLink]="[entity.path]" routerLinkActive="active" style="padding: 10px 10px 10px 10px; margin: 3px" class="nav-link">
-        <p>{{entity.linkName | i18n }}</p>
+    <a [routerLink]="[entity.path]" routerLinkActive="active" style="padding: 10px 10px 10px 10px; margin: 3px" class="nav-link"
+        [class.collapsed]="entity.children.length>0 && entity.collapsed" [attr.data-toggle]="'collapse'">
+        <p>{{entity.linkName | i18n }}
+            <i *ngIf="entity.children.length>0 && entity.collapsed"
+                class="nc-icon nc-stre-right" (click)="expand(entity.id, $event)"></i>
+            <i *ngIf="entity.children.length>0 && !entity.collapsed"
+                class="nc-icon nc-stre-down" (click)="collapse(entity.id, $event)"></i>
+            <i *ngIf="entity.children.length==0">&nbsp;</i>
+        </p>
     </a>
-    <frmdb-navigation-segment [nav]="entity.children" *ngIf="!entity.collapsed"></frmdb-navigation-segment>
+    <ul class="nav" frmdb-navigation-segment [nav]="entity.children" *ngIf="!entity.collapsed"></ul>
 </li>
