--- a/fe/src/app/table/table.component.scss
+++ b/fe/src/app/table/table.component.scss
@@ -53,3 +53,7 @@
     padding-left: 5px;
     padding-right: 5px;
 }
+
+::ng-deep .mwz-table-wrapper .ag-theme-balham .ag-root {
+    border: 0px;
+}
