--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.scss
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.scss
@@ -13,3 +13,8 @@ a.theme-color-pallete-purple {
     border-radius: 50%;
     border: 0
 }
+
+.formula-button {
+    margin-right: 5px;
+    border: 0px;
+}
