--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -10,7 +10,25 @@
       <span class="navbar-toggler-bar burger-lines"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
-      <frmdb-formula-editor></frmdb-formula-editor>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown" [class.show]="editorOpened">
+          <a class="nav-link" href="javascript:void(0)" (click)="toggleFormulaEditor()">
+            <img src="/assets/img/formula16.png" width="16" height="16" />
+          </a>
+          <div class="dropdown-menu dropdown-menu" [class.show]="editorOpened">
+            <router-outlet name="router-outlet-formula-editor-preview"></router-outlet>
+          </div>
+        </li>
+        <li class="nav-item">
+          <form class="navbar-form" role="search">
+            <div class="input-group">
+              <router-outlet name="router-outlet-formula-editor-code"></router-outlet>
+              <input type="text" [value]="getFormula()" (focus)="formulaFocused()" class="form-control formula-input"
+                [style.visibility]="editorOpened ? 'hidden' : 'visible'" [disabled]="!(developerMode$ | async)" placeholder="FORMULA..." />
+            </div>
+          </form>
+        </li>
+      </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
           <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="TopNavSettings" ngbDropdownToggle
