using wiz-editor as formula editor, ten+codemirror are too complicated

--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.scss
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.scss
@@ -19,6 +19,15 @@ a.theme-color-pallete-purple {
     border: 0px;
 }
 
+.formula-button.isDisabled {
+    color: currentColor;
+    cursor: not-allowed;
+    opacity: 0.5;
+    text-decoration: none;
+}
+
 .formula-input {
     min-width: 500px;
+    resize: none;
+    overflow: hidden;
 }
