--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.html
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.html
@@ -1,3 +1,1 @@
-<ul>
-  <!-- <li frmdb-formula-editor-item *ngFor="let node of getFormulaPreviewNodes().children" [formulaEditorNode]="node"></li> -->
-</ul>
+<div class="formula-code-editor" wiz-editor [ctext]="editorExpr" [suggestion]="setSuggestion.bind(this)" [colorClass]="setClass.bind(this)" [validation]="doValidation.bind(this)"></div>
