--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -12,19 +12,18 @@
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown" [class.show]="editorOpened">
-          <a class="nav-link" href="javascript:void(0)" (click)="toggleFormulaEditor()">
+          <a class="nav-link" class="formula-button" [class.isDisabled]="!developerMode" href="javascript:void(0)" (click)="toggleFormulaEditor()">
             <img src="/assets/img/formula16.png" width="16" height="16" />
           </a>
           <div class="dropdown-menu dropdown-menu" [class.show]="editorOpened">
-            <router-outlet name="router-outlet-formula-editor-preview"></router-outlet>
+            <frmdb-formula-code-editor *ngIf="editorOpened"></frmdb-formula-code-editor>
           </div>
         </li>
         <li class="nav-item">
           <form class="navbar-form" role="search">
             <div class="input-group">
-              <router-outlet name="router-outlet-formula-editor-code"></router-outlet>
-              <input type="text" [value]="getFormula()" (focus)="formulaFocused()" class="form-control formula-input"
-                [style.visibility]="editorOpened ? 'hidden' : 'visible'" [disabled]="!(developerMode$ | async)" placeholder="FORMULA..." />
+              <textarea type="text" [value]="getFormula()" (focus)="formulaFocused()" class="form-control formula-input"
+                disabled placeholder="FORMULA..." ></textarea>
             </div>
           </form>
         </li>
@@ -39,8 +38,8 @@
           <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
             <a class="dropdown-item" href="javascript:void(0)">Notification 1</a>
             <a class="dropdown-item" href="javascript:void(0)">Notification 2</a>
-            <div class="divider" *ngIf="developerMode$ | async"></div>
-            <a class="dropdown-item" href="javascript:void(0)" *ngIf="developerMode$ | async">
+            <div class="divider" *ngIf="developerMode"></div>
+            <a class="dropdown-item" href="javascript:void(0)" *ngIf="developerMode">
               <img src="/assets/flags/us.png" (click)="switchLanguage('us')" style="margin-right: 5px; cursor: pointer" />
               <img src="/assets/flags/de.png" (click)="switchLanguage('de')" style="margin-right: 5px; cursor: pointer" />
               <img src="/assets/flags/fr.png" (click)="switchLanguage('fr')" style="margin-right: 5px; cursor: pointer" />
@@ -53,8 +52,8 @@
               <img src="/assets/flags/sv.png" (click)="switchLanguage('sv')" style="margin-right: 5px; cursor: pointer" />
               &nbsp;
             </a>
-            <div class="divider" *ngIf="developerMode$ | async"></div>
-            <a class="dropdown-item" href="javascript:void(0)" *ngIf="developerMode$ | async">
+            <div class="divider" *ngIf="developerMode"></div>
+            <a class="dropdown-item" href="javascript:void(0)" *ngIf="developerMode">
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('red')" style="color: red; cursor: pointer"></i> 
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('green')" style="color: green; cursor: pointer"></i> 
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('blue')" style="color: blue; cursor: pointer"></i> 
@@ -62,8 +61,8 @@
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('orange')" style="color: orange; cursor: pointer"></i> 
                 &nbsp;
             </a>
-            <div class="divider" *ngIf="developerMode$ | async"></div>
-            <a class="dropdown-item" disabled href="javascript:void(0)" *ngIf="developerMode$ | async">
+            <div class="divider" *ngIf="developerMode"></div>
+            <a class="dropdown-item" disabled href="javascript:void(0)" *ngIf="developerMode">
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-4.jpg')" src="/assets/sidebar_images/sidebar-4.jpg" style="margin-right: 4px" />
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-1.jpg')" src="/assets/sidebar_images/sidebar-1.jpg" style="margin-right: 4px" />
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-2.jpg')" src="/assets/sidebar_images/sidebar-2.jpg" style="margin-right: 4px" />
@@ -74,12 +73,12 @@
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-8.jpg')" src="/assets/sidebar_images/sidebar-8.jpg" style="margin-right: 4px" />
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-9.jpg')" src="/assets/sidebar_images/sidebar-9.jpg" style="margin-right: 4px" />
             </a>
-            <div class="divider" *ngIf="developerMode$ | async"></div>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)" *ngIf="developerMode$ | async"><img height="60" width="80" src="/assets/light.jpg" /> Light Theme</a>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)" *ngIf="developerMode$ | async"><img height="60" width="80" src="/assets/material.jpg" /> Material Theme</a>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)" *ngIf="developerMode$ | async"><img height="60" width="80" src="/assets/nowui.jpg" /> NowUI Theme</a>
+            <div class="divider" *ngIf="developerMode"></div>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)" *ngIf="developerMode"><img height="60" width="80" src="/assets/light.jpg" /> Light Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)" *ngIf="developerMode"><img height="60" width="80" src="/assets/material.jpg" /> Material Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)" *ngIf="developerMode"><img height="60" width="80" src="/assets/nowui.jpg" /> NowUI Theme</a>
             <div class="divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()"><i class="nc-icon nc-settings-90"></i>{{ ((developerMode$ | async) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()"><i class="nc-icon nc-settings-90"></i>{{ ((developerMode) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}</a>
             <div class="divider"></div>
             <a class="dropdown-item" href="javascript:void(0)"><i class="nc-icon nc-circle-09"></i>Account</a>
           </div>
