started to add formula-editor, using directived for integration with theme

--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.html
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.html
@@ -1,1 +1,7 @@
 <div class="formula-code-editor" wiz-editor [ctext]="editorExpr" [suggestion]="setSuggestion.bind(this)" [colorClass]="setClass.bind(this)" [validation]="doValidation.bind(this)"></div>
+<div class="formula-code-editor-preview">
+    <table>
+        <tr><th>Code</th><th>Name</th><th>Qty</th></tr>
+        <tr><td>code</td><td>name</td><td>5</td></tr>
+    </table>
+</div>
