--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
@@ -1,3 +1,10 @@
 .formula-code-editor {
+    min-height: 100px;
     min-width: 700px;
+}
+
+.formula-code-editor-preview {
+    min-height: 400px;
+    min-width: 700px;
+    margin-top: 10px;
 }
