more work on demo

--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -17,6 +17,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu" [class.show]="editorOpened">
             <frmdb-formula-code-editor *ngIf="editorOpened"></frmdb-formula-code-editor>
+            <frmdb-formula-editor-info *ngIf="editorOpened"></frmdb-formula-editor-info>
           </div>
         </li>
         <li class="nav-item">
