--- a/fe/src/app/themes/material-dashboard-theme/layout/layout.component.html
+++ b/fe/src/app/themes/material-dashboard-theme/layout/layout.component.html
@@ -27,7 +27,7 @@
             <h4 class="card-title ">Page Title TBD</h4>
             <p class="card-category">Page Subtitle TBD</p>
           </div>
-          <div class="card-body">
+          <div class="card-body" style="min-height: 600px">
             <router-outlet></router-outlet>
           </div>
         </div>
