--- a/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
@@ -12,17 +12,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
       <form>
         <div class="input-group no-border">
-          <input type="text" value="" class="form-control" placeholder="Search...">
-          <div class="input-group-append">
-            <div class="input-group-text">
-              <i class="now-ui-icons ui-1_zoom-bold"></i>
-            </div>
-          </div>
-        </div>
-      </form>
-      <form>
-        <div class="input-group no-border">
-          <input type="text" value="" class="form-control" placeholder="FORMULA...">
+          <input type="text" frmdbCurrentFormula value="" style="min-width: 500px" class="form-control" placeholder="FORMULA...">
           <div class="input-group-append">
             <div class="input-group-text">
               <img src="/assets/img/formula16.png" width="16" height="16" />
