--- a/fe/src/app/themes/now-uidashboard-theme/layout/layout.component.html
+++ b/fe/src/app/themes/now-uidashboard-theme/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper frmdb-layout">
+ <div class="wrapper frmdb-layout">
   <div class="sidebar" data-color="orange">
     <!--
       Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="card">
-            <div class="card-body">
+            <div class="card-body" style="min-height: 600px">
               <router-outlet></router-outlet>
             </div>
           </div>
