modal for formula editor info

--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
@@ -1,10 +1,4 @@
 .formula-code-editor {
-    min-height: 60px;
+    height: 22px;
     min-width: 700px;
-}
-
-.formula-code-editor-preview {
-    min-height: 400px;
-    min-width: 700px;
-    margin-top: 10px;
 }
