--- a/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.html
+++ b/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.html
@@ -1,3 +1,5 @@
-<p>
-  formula-editor-info works!
-</p>
+<div class="formula-editor-info" *ngIf="editorOpened$ | async">
+  <p>
+    formula-editor-info works!
+  </p>  
+</div>
