started navigation to entity under cursor and highlighting the columns used in the formula

--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.html
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.html
@@ -1,1 +1,7 @@
-<div class="formula-code-editor" wiz-editor [ctext]="editorExpr$ | async" [suggestion]="setSuggestion.bind(this)" [colorClass]="setClass.bind(this)" [validation]="doValidation.bind(this)"></div>
+<div class="formula-code-editor" wiz-editor 
+    (cursorMove)="cursorMove($event)"
+    [ctext]="editorExpr" 
+    [suggestion]="setSuggestion.bind(this)" 
+    [colorClass]="setClass.bind(this)" 
+    [validation]="doValidation.bind(this)">
+</div>
