--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
@@ -1,4 +1,90 @@
 .formula-code-editor {
     height: 22px;
-    min-width: 700px;
+    min-width: 600px;
+    width:100%;
+    height:100%;
+}
+
+.editor-textarea,
+.editor-formatted-overlay {
+    box-sizing: border-box;
+    width: 100%;
+    // padding: 1rem;
+    border: none;
+    font-family: monospace;
+    font-size: 13px;
+    background: transparent;
+    white-space: pre-wrap;
+    line-height: 1.5em;
+    word-wrap: break-word;
+}
+
+.editor-textarea {
+    background: rgb(228, 227, 227);
+    outline: none;
+    resize: none;
+    overflow: hidden;
+    opacity: 0.6;
+    margin: 0;
+    z-index: 1;
+    height: 22px;
+    -webkit-overflow-scrolling: touch;
+}
+
+.editor-formatted-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    pointer-events: none;
+    overflow: hidden;
+    margin: 0;
+    height:100%;
+}
+
+/*https://stackoverflow.com/questions/36265026/angular-2-innerhtml-styling*/
+:host ::ng-deep .suggestion{
+    top:.8rem;
+    width:0;
+    position: relative;
+    display:inline-block;
+    vertical-align: top;
+    height: 1rem;
+    overflow:visible;
+}
+
+:host ::ng-deep .suggestion-element{
+    background-color:darkgray;
+    color:black;
+    padding-left:4px;
+    width:6rem;
+}
+
+:host ::ng-deep .suggestion-element.suggestion-active{
+    background-color:navy;
+    color:white;
+}
+
+:host ::ng-deep .editor-error{
+    text-decoration: underline red dotted;
+}
+
+:host ::ng-deep .error-note-holder{
+    top:-1rem;
+    width:0;
+    position: relative;
+    display:inline-block;
+    vertical-align: top;
+    height: 1rem;
+    overflow:visible;
+}
+
+
+:host ::ng-deep .error-note{
+    color:darkred;
+    padding-left:4px;
+    width:6rem;
+    text-decoration:underline red dotted;
+    background-color: white;
+    opacity: 0.7;
 }
