--- a/fe/src/app/form/form-vertical-layout/form-vertical-layout.component.scss
+++ b/fe/src/app/form/form-vertical-layout/form-vertical-layout.component.scss
@@ -1,7 +1,7 @@
 :host {
     display: flex;
     flex-direction: column;
-    padding: .5rem 1.5rem .5rem 1.5rem;
+    padding: .3rem .8rem .3rem .8rem;
     border: 1px dashed;
     border-color: rgba(255, 255, 255, 0);
     &.outline {
