--- a/fe/src/app/form/form_input/form_input.component.html
+++ b/fe/src/app/form/form_input/form_input.component.html
@@ -1,6 +1,6 @@
 <!-- <edit-panel *ngIf="editMode$|async" [node]="nodeElement"></edit-panel> -->
-<label [for]="nodeElement.propertyName">{{nodeElement.propertyName}}</label>
-<input class="form-control" [type]="getType()" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)"
+<label [for]="inputElement._id">{{inputElement.propertyName}}</label>
+<input [id]="inputElement._id" class="form-control" [type]="getType()" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)"
     *ngIf="hasControl(parentFormPath)" />
 
 <div class="form-input-feedback-invalid" *ngIf="ctrl && ctrl.dirty && ctrl.invalid">
