--- a/fe/src/app/form/form_timepicker/form_timepicker.component.html
+++ b/fe/src/app/form/form_timepicker/form_timepicker.component.html
@@ -1,2 +1,2 @@
-<label [for]="nodeElement.propertyName">{{nodeElement.propertyName}}</label>
+<label [for]="inputElement.propertyName">{{inputElement.propertyName}}</label>
 <ngb-timepicker [id]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)" *ngIf="hasControl(parentFormPath)"></ngb-timepicker>
