--- a/fe/src/app/themes/default-theme/theme-editor/theme-editor.component.html
+++ b/fe/src/app/themes/default-theme/theme-editor/theme-editor.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title">Hi there!</h4>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+  <button type="button" class="close" aria-label="Close" >
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
@@ -12,5 +12,5 @@
 
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
+  <!-- <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button> -->
 </div>
