#11 i18n added identifiers to nav component

--- a/fe/src/app/themes/default-theme/navigation/navigation.segment.scss
+++ b/fe/src/app/themes/default-theme/navigation/navigation.segment.scss
@@ -29,3 +29,16 @@
 .nav{
     padding-left:1rem;
 }
+
+.frmdb-nav-segment-text {
+    position: relative
+}
+.frmdb-nav-segment-dev-mode-identifier {
+    position: absolute;
+    top: 1em;
+    left: 0;
+    font-size: 0.75em;
+    color: lightgrey;
+    text-decoration: underline;
+    text-transform: none;
+}
