--- a/fe/src/app/themes/default-theme/navigation/navigation.segment.html
+++ b/fe/src/app/themes/default-theme/navigation/navigation.segment.html
@@ -2,7 +2,11 @@
     <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <a [routerLink]="[entity.path]" style="padding: 10px 10px 10px 10px; margin: 3px" class="nav-link"
             [class.collapsed]="entity.children.length>0 && entity.collapsed && !entity.onPath" [attr.data-toggle]="'collapse'">
-            <p>{{entity.linkName | i18n }}
+            <p>
+                <span class="frmdb-nav-segment-text">
+                    <span class="frmdb-nav-segment-dev-mode-identifier" *ngIf="devMode$ | async">{{entity.id}}</span>
+                    {{entity.linkName | i18n }}
+                </span>
                 <i *ngIf="entity.children.length>0 && entity.collapsed && !entity.onPath" class="nc-icon nc-stre-right" (click)="expand(entity.id, $event)"></i>
                 <i *ngIf="entity.children.length>0 && (!entity.collapsed || entity.onPath)" class="nc-icon nc-stre-down" (click)="collapse(entity.id, $event)"></i>
                 <i *ngIf="entity.children.length==0">&nbsp;</i>
