--- a/fe/src/styles.scss
+++ b/fe/src/styles.scss
@@ -49,7 +49,7 @@ form div .form-control.ng-dirty.ng-pending:not(form) {
     width: 0;
     height: 0;
     border-right: .6rem solid transparent;
-    border-top: .6rem solid gray;
+    border-top: .6rem solid lightgray;
     cursor: move;
     z-index: 1000;
 }
