added dev mode identifiers to form.component (but broke a little the drag+drop)

--- a/fe/src/app/form/form_table/form_table.component.html
+++ b/fe/src/app/form/form_table/form_table.component.html
@@ -3,9 +3,18 @@
         <tr>
             <ng-container *ngFor="let child of tableElement.childNodes" [ngSwitch]="child.nodeType">
                 <ng-container *ngSwitchCase="'form_autocomplete'">
-                    <th *ngFor="let propName of child.snapshotCurrentValueOfProperties">{{propName}}</th>
+                    <th *ngFor="let propName of child.snapshotCurrentValueOfProperties">
+                        <span class="form-table-header-text">
+                            <span class="frmdb-table-header-dev-mode-identifier" *ngIf="devMode$ | async">{{params.displayName}}</span>
+                            {{params.displayName | i18n}}
+                        </span>
+                    
+                        {{propName | i18n}}
+                    </th>
                 </ng-container>
-                <th *ngSwitchCase="'form_input'">{{child.propertyName}}</th>
+                <th *ngSwitchCase="'form_input'">
+                    {{child.propertyName | i18n}}
+                </th>
             </ng-container>
         </tr>
     </thead>
