--- a/fe/src/app/form/context-menu/context-menu.component.scss
+++ b/fe/src/app/form/context-menu/context-menu.component.scss
@@ -5,16 +5,16 @@
     a.context-menu-button {
         position: absolute;
         top: 0;
-        right: 0;
+        right: 1em;
         cursor: pointer;
         font-size: large;
         background-color: lightgray;
         border-radius: 50%;
-        margin: 1px;
         color: white;
         display: block;
-        width: 1rem;
-        height: 1rem;
+        width: 0.75rem;
+        height: 0.75rem;
+        font-size: 0.75rem;
         text-align: center;
         vertical-align: middle;
         &:hover {
@@ -26,7 +26,7 @@
         background-color: rgba(255, 255, 255, .6);
         position: absolute;
         top: .2rem;
-        right: 0;
+        right: 1em;
         border: 1px solid darkgray;
         list-style: none;
         padding: .3rem;
