--- a/fe/src/app/form/form_input/form_input.component.scss
+++ b/fe/src/app/form/form_input/form_input.component.scss
@@ -8,6 +8,11 @@
             background-color: $gray-300 !important;
         }
     }
+
+    .frmdb-input-dev-mode-label {
+        color: lightgrey;
+        text-decoration: underline;
+    }
     // edit-panel {
     //     top: 2rem;
     //     left: -0.2rem;
