--- a/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.html
+++ b/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.html
@@ -1,5 +1,6 @@
-<div class="formula-editor-info" *ngIf="editorOpened$ | async">
+<div draggable="true" [style.transform]="'translate3d('+x+'px,'+y+'px,0px)'" (mousedown)="dragStartHandle($event)"
+  (pointermove)="dragHandle($event)" (mouseup)="dragEndHandle($event)" class="formula-editor-info" *ngIf="editorOpened$ | async">
   <p>
     formula-editor-info works!
-  </p>  
+  </p>
 </div>
