--- a/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.scss
+++ b/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.scss
@@ -1,6 +1,17 @@
 .formula-editor-info {
-    border: 5px solid red;
     position: fixed;
-    top: 200px;
-    right: 5px;
+    cursor: move;
+    touch-action: none;
+    -webkit-user-drag: none;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
+    width: 10rem;
+    min-height: 10rem;
+    top: 5rem;
+    left: 5rem;
+    background-color: white;
+    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    padding: .5rem;
+    z-index: 10000;
 }
