changed editing schematic

--- a/fe/src/app/form/context-menu/context-menu.component.html
+++ b/fe/src/app/form/context-menu/context-menu.component.html
@@ -1,6 +1,6 @@
-<a class="context-menu-button" *ngIf="!expanded" (click)="showContext()">+</a>
+<fa-icon [icon]="faWrench" [class.expanded]="expanded" class="fa-xs context-menu-button" (click)="toggleContext($event)"></fa-icon>
 
-<ul class="context-menu" *ngIf="expanded">
+<ul class="context-menu" *ngIf="expanded" [style.top.px]="y" [style.left.px]="x">
   <ng-container *ngIf="availableTypes">
     <li *ngFor="let p of availableTypes" (click)="switchTo(p)">Switch to: {{p}}</li>
   </ng-container>
@@ -9,4 +9,3 @@
   </ng-container>
   <li *ngIf="canDelete" (click)="delete()">Delete</li>
 </ul>
-<a class="context-menu-button" *ngIf="expanded" (click)="hideContext()">-</a>
