--- a/fe/src/app/form/drop-handle/drop-handle.component.scss
+++ b/fe/src/app/form/drop-handle/drop-handle.component.scss
@@ -1,10 +1,11 @@
 :host {
     border-style: solid;
     border-width: 1px;
-    border-color:rgba(255,255,255,0.0);
+    border-color:transparent;
 
     &.visible {
-        border-color:magenta;
+        border-style:dashed;
+        border-color:gray;
     }
     &.vertical {
         width: .5rem;
