--- a/fe/src/app/form/form-vertical-layout/form-vertical-layout.component.scss
+++ b/fe/src/app/form/form-vertical-layout/form-vertical-layout.component.scss
@@ -4,6 +4,8 @@
     padding: .3rem .8rem .3rem .8rem;
     border: 1px dashed;
     border-color: rgba(255, 255, 255, 0);
+    min-width: 2rem;
+    min-height: 1rem;
     &.outline {
         border-color: lightgray;
     }
