--- a/fe/src/app/form/form_item/form_item.component.html
+++ b/fe/src/app/form/form_item/form_item.component.html
@@ -1,6 +1,10 @@
 <div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container" (dragstart)="dragStart($event)"
   (dragend)="dragEnd($event)">
-  <div *ngIf="editMode$|async" class="drag-handle" #dragHandle [id]="'drag_'+nodeElement._id" (mousedown)="checkHandle($event)"></div>
+  <fa-icon [icon]="faBars" *ngIf="editMode$|async" class="drag-handle fa-xs" #dragHandle [id]="'drag_'+nodeElement._id"
+    (mousedown)="checkHandle($event)"></fa-icon>
+  <form-context-menu [item]="nodeElement" [canDelete]="nodeElement.nodeType!=='form_grid'" [availableChildren]="getAvailableChildren()"
+    [availableTypes]="getAvailableTypes()" *ngIf="editMode$|async"></form-context-menu>
+
   <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
   <div form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
@@ -20,6 +24,5 @@
   <v-layout *ngSwitchCase="'form_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></v-layout>
   <div *ngSwitchDefault style="border: 1px solid red;">Child Element NOT KNOWN '{{childEl.nodeType}}' !</div>
-  <form-context-menu [item]="nodeElement" [canDelete]="nodeElement.nodeType!=='form_grid'" [availableChildren]="getAvailableChildren()"
-    [availableTypes]="getAvailableTypes()" *ngIf="editMode$|async"></form-context-menu>
+
 </div>
