started implementing suggestions

--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
@@ -37,7 +37,7 @@
     left: 0;
     z-index: 10;
     pointer-events: none;
-    overflow: hidden;
+    // overflow: hidden;
     margin: 0;
     height:100%;
 }
