--- a/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.html
+++ b/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.html
@@ -1,5 +1,6 @@
-<div class="formula-editor-info" *ngIf="editorOpened$ | async">
+<div draggable="true" class="formula-editor-info" (drag)="dragHandle($event)" (dragend)="dragHandle($event)"
+  (dragstart)="dragStartHandle($event)" [style.top.px]="y" [style.left.px]="x">
   <p>
     formula-editor-info works!
-  </p>  
+  </p>
 </div>
