--- a/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.scss
+++ b/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.scss
@@ -1,6 +1,10 @@
 .formula-editor-info {
-    border: 5px solid red;
+    z-index:10000;
+    background: white;
+    box-shadow: 2px 2px 1px 1px rgba(0, 0, 255, .2);
+    min-height: 10rem;
+    min-width: 20rem;
+    display:block;
     position: fixed;
-    top: 200px;
-    right: 5px;
+    padding:1rem;
 }
