--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
@@ -42,15 +42,15 @@
     height:100%;
 }
 
-::ng-deep .c_b6d0f9 { color: #b6d0f9 }
-::ng-deep .c_f9ccf9 { color: #f9ccf9 }
-::ng-deep .c_fcd9e1 { color: #fcd9e1 }
-::ng-deep .c_d9f9e5 { color: #d9f9e5 }
-::ng-deep .c_f5f9d9 { color: #f8f3c5 }
+::ng-deep .c_b6d0f9 { background-color: #b6d0f9 }
+::ng-deep .c_f9ccf9 { background-color: #f9ccf9 }
+::ng-deep .c_fcd9e1 { background-color: #fcd9e1 }
+::ng-deep .c_d9f9e5 { background-color: #d9f9e5 }
+::ng-deep .c_f5f9d9 { background-color: #f8f3c5 }
 
 /*https://stackoverflow.com/questions/36265026/angular-2-innerhtml-styling*/
 :host ::ng-deep .suggestion{
-    top:.8rem;
+    top:1.2rem;
     width:0;
     position: relative;
     display:inline-block;
@@ -63,7 +63,7 @@
     background-color:darkgray;
     color:black;
     padding-left:4px;
-    width:6rem;
+    width:25em;
 }
 
 :host ::ng-deep .suggestion-element.suggestion-active{
