--- a/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.html
+++ b/fe/src/app/formula-editor/formula-editor-info/formula-editor-info.component.html
@@ -1,5 +1,5 @@
 <div draggable="true" [style.transform]="'translate3d('+x+'px,'+y+'px,0px)'" (mousedown)="dragStartHandle($event)"
-   class="formula-editor-info" >
+   class="formula-editor-info" *ngIf="editorOpened$ | async">
   <p>
     formula-editor-info works!
   </p>
