--- a/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
+++ b/fe/src/app/formula-editor/formula-code-editor/formula-code-editor.component.scss
@@ -42,11 +42,11 @@
     height:100%;
 }
 
-::ng-deep .c_b6d0f9 { background-color: #b6d0f9 }
-::ng-deep .c_f9ccf9 { background-color: #f9ccf9 }
-::ng-deep .c_fcd9e1 { background-color: #fcd9e1 }
-::ng-deep .c_d9f9e5 { background-color: #d9f9e5 }
-::ng-deep .c_f5f9d9 { background-color: #f8f3c5 }
+::ng-deep .c_b6d0f988 { background-color: #99adce88 }
+::ng-deep .c_f9ccf988 { background-color: #f9ccf988 }
+::ng-deep .c_fcd9e188 { background-color: #fcd9e188 }
+::ng-deep .c_d9f9e588 { background-color: #d9f9e588 }
+::ng-deep .c_f5f9d988 { background-color: #f8f3c588 }
 
 /*https://stackoverflow.com/questions/36265026/angular-2-innerhtml-styling*/
 :host ::ng-deep .suggestion{
