rename dev mode identifiers to make them shorter

--- a/fe/src/app/form/form_table/form_table.component.html
+++ b/fe/src/app/form/form_table/form_table.component.html
@@ -1,4 +1,4 @@
-<table class="table table-striped">
+<table class="table table-striped table-sm">
     <thead>
         <tr>
             <ng-container *ngFor="let child of tableElement.childNodes" [ngSwitch]="child.nodeType">
